examples: Add TapHandler
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/resources.qrc
+++ b/resources.qrc
@@ -6,5 +6,6 @@
         <file alias="Canvas Advanced.qml">qml/examples/canvasadvanced.qml</file>
         <file alias="Repeater.qml">qml/examples/repeater.qml</file>
         <file alias="Rotation Animator.qml">qml/examples/rotationanimator.qml</file>
+        <file alias="TapHandler.qml">qml/examples/taphandler.qml</file>
     </qresource>
 </RCC>
