exmaples: Add a serie of animation examples
Add:
 - AnchorAnimation.qml
 - AnchorChanges.qml
 - AnimatedImage.qml
 - AnimatedSprite.qml

Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/resources.qrc
+++ b/resources.qrc
@@ -3,6 +3,10 @@
         <file alias="main.qml">qml/main.qml</file>
     </qresource>
     <qresource prefix="/examples">
+        <file alias="AnchorAnimation.qml">qml/examples/anchoranimation.qml</file>
+        <file alias="AnchorChanges.qml">qml/examples/anchorchanges.qml</file>
+        <file alias="AnimatedImage.qml">qml/examples/animatedimage.qml</file>
+        <file alias="AnimatedSprite.qml">qml/examples/animatedsprite.qml</file>
         <file alias="Canvas Advanced.qml">qml/examples/canvasadvanced.qml</file>
         <file alias="Repeater.qml">qml/examples/repeater.qml</file>
         <file alias="Rotation Animator.qml">qml/examples/rotationanimator.qml</file>
