examples: Add brightnesscontrast
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/resources.qrc
+++ b/resources.qrc
@@ -9,6 +9,7 @@
         <file alias="AnimatedSprite.qml">qml/examples/animatedsprite.qml</file>
         <file alias="Binding.qml">qml/examples/binding.qml</file>
         <file alias="Blend.qml">qml/examples/blend.qml</file>
+        <file alias="BrightnessControl.qml">qml/examples/brightnesscontrast.qml</file>
         <file alias="Canvas Advanced.qml">qml/examples/canvasadvanced.qml</file>
         <file alias="Repeater.qml">qml/examples/repeater.qml</file>
         <file alias="Rotation Animator.qml">qml/examples/rotationanimator.qml</file>
