style: Fix splitter height
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ canvas {
 
 .splitter {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 50px); // This value should the same as header-row.height
     display: flex;
 }
 
