--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,7 @@ canvas {
 
 #separator {
     cursor: col-resize;
-    background: rgba(81, 252, 59, 0.897);
-    box-shadow: inset 0px 0px 8px 0px rgba(36, 33, 33, 0.75);
+    background: rgb(56, 216, 75);
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='10' height='30'><path d='M2 0 v30 M5 0 v30 M8 0 v30' fill='none' stroke='black'/></svg>");
     background-repeat: no-repeat;
     background-position: center;
@@ -206,4 +205,27 @@ canvas {
     top: 30%;
     position: absolute;
     line-height: 23pt;
+}
+
+/* Status bar */
+
+.status-bar {
+    width: 49%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    font-size: 12px;
+    position: absolute;
+    padding: 1px 5px;
+    background-color: rgb(56, 216, 75);
+    color: #ffffff;
+    left: 0;
+    right: 0;
+    bottom: 0px;
+    height: 22px;
+    z-index: 9999;
+}
+
+.status-bar p {
+    margin: 0;
 }
