--- a/styles.css
+++ b/styles.css
@@ -235,16 +235,17 @@ canvas {
 #terminal {
     position: fixed;
     bottom: 24px;
-    font-size: 16px;
+    font-size: 14px;
     left: 0;
     color: white;
     background-color: rgb(36, 38, 49);
     border: 1px solid rgb(68, 70, 80);
-    width: 48.5%;
+    width: 47.5%;
     padding: 0px 5px;
     height: 8px;
     min-height: 8px;
     z-index: 5;
+    overflow: hidden auto
 }
 
 #terminal p {
