Scrollbar new design

--- a/styles.css
+++ b/styles.css
@@ -257,3 +257,25 @@ canvas {
 #terminal p {
     margin: 0;
 }
+
+/* Scroll design */
+
+/* width */
+::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgba(50, 187, 16, 0.897); 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #44bb15; 
+  }
