--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@ body {
     padding: 0;
     margin: 0;
     overflow: hidden;
-    height: 100%
+    height: 100%;
+    background-color: #282A36;
 }
 
 /* the canvas *must not* have any border or padding, or mouse coords will be wrong */
@@ -32,6 +33,7 @@ canvas {
 }
 
 .splitter {
+    max-height: 100%;
     width: 100%;
     height: calc(100% - 50px); /* This value should the same as header-row.height*/
     display: flex;
@@ -52,9 +54,10 @@ canvas {
 }
 
 #editor-div {
-    width: 50%;
-    height: 100%;
+    width: 100%;
+    height: 91.5%;
     min-width: 10px;
+    min-height: 50px;
 }
 
 #qml-div {
@@ -233,17 +236,18 @@ canvas {
 /* Terminal */
 
 #terminal {
-    position: fixed;
-    bottom: 24px;
+    max-height: 610px;
+    position: relative;
+    bottom: 0px;
     font-size: 14px;
     left: 0;
     color: white;
     background-color: rgb(36, 38, 49);
     border: 1px solid rgb(68, 70, 80);
-    width: 48.9%;
+    width: 98%;
     padding: 0px 5px;
-    height: 8px;
-    min-height: 8px;
+    overflow-y: scroll;
+    height: 30px;
     z-index: 5;
 }
 
@@ -279,3 +283,17 @@ canvas {
   ::-webkit-scrollbar-thumb:hover {
     background: #44bb15; 
   }
+
+  .app_editor_wrapper {
+      width: 50%;
+	background-color: #cccccc;
+	border-bottom: 1px solid #222222;
+}
+
+.app_editor_dragbar {
+	background-color: rgb(56, 216, 75);
+	width: 100%;
+	height: 5px;
+	cursor: row-resize !important;
+	opacity: 1;
+}
