--- a/styles.css
+++ b/styles.css
@@ -213,7 +213,7 @@ canvas {
 /* Status bar */
 
 .status-bar {
-    width: 49.1%;
+    width: 49.4%;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
@@ -236,15 +236,16 @@ canvas {
 /* Terminal */
 
 #terminal {
-    max-height: 610px;
-    position: relative;
-    bottom: 0px;
+    position: absolute;
+    max-height: 800px;
+    min-height: 30px;
+    bottom: 23px;
     font-size: 14px;
     left: 0;
     color: white;
     background-color: rgb(36, 38, 49);
     border: 1px solid rgb(68, 70, 80);
-    width: 98.5%;
+    width: 49.5%;
     padding: 0px 5px;
     height: 30px;
     z-index: 5;
@@ -284,7 +285,7 @@ canvas {
   }
 
   .app_editor_wrapper {
-      width: 50%;
+    width: 50%;
 	background-color: rgb(36, 38, 49);
 	border-bottom: 1px solid #222222;
 }
@@ -292,7 +293,8 @@ canvas {
 .app_editor_dragbar {
 	background-color: rgb(56, 216, 75);
 	width: 100%;
-	height: 5px;
+	height: 8px;
 	cursor: row-resize !important;
-	opacity: 1;
+    opacity: 1;
+    z-index: 999999;
 }
