--- a/styles.css
+++ b/styles.css
@@ -55,9 +55,10 @@ canvas {
 
 #editor-div {
     width: 100%;
-    height: 91.5%;
+    height: 85vh;
     min-width: 10px;
-    min-height: 50px;
+    min-height: 18px;
+    max-height: 85vh;
 }
 
 #qml-div {
@@ -237,17 +238,17 @@ canvas {
 
 #terminal {
     position: absolute;
-    max-height: 800px;
-    min-height: 30px;
+    max-height: 86vh;
+    min-height: 25px;
     bottom: 23px;
     font-size: 14px;
     left: 0;
     color: white;
     background-color: rgb(36, 38, 49);
     border: 1px solid rgb(68, 70, 80);
-    width: 49.5%;
+    width: 48.8%;
     padding: 0px 5px;
-    height: 30px;
+    height: 25px;
     z-index: 5;
 }
 
