--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,15 @@ canvas {
     display: flex;
 }
 
+.splitter > .gutter {
+    background-color: rgba(30, 30, 30, 0.979);
+    border: 0px;
+}
+
+.splitter > .gutter::before {
+    background-color: rgba(50, 187, 16, 0.5);
+}
+
 #editor-div {
     width: 100%;
     height: 100%;
@@ -49,7 +58,7 @@ canvas {
 
 #qml-div {
     background-color: #eee;
-    width: 50%;
+    width: 100%;
     height: 100%;
     min-width: 10px;
 }
@@ -226,6 +235,7 @@ canvas {
     background-color: rgb(36, 38, 49);
     overflow-x: hidden;
     overflow-y: auto;
+    height: calc(100% - 18px);
 }
 
 #terminal p {
