--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,7 @@ canvas {
     color: #fff;
     height: 1.5em;
     position: absolute;
-    top: 4px;
+    top: calc(var(--header-height) - 1.5em) / 2;
     right: 10px;
 }
 
