--- a/html/styles.css
+++ b/html/styles.css
@@ -6,13 +6,14 @@ body {
     padding: 0;
     margin: 0;
     overflow: hidden;
-    height: 100%
+    height: 100%;
+    background-color: #202225;
 }
 
 /* the canvas *must not* have any border or padding, or mouse coords will be wrong */
 canvas {
     border: 0px none;
-    background-color: white;
+    background-color: #202225;
     height: 100%;
     width: 100%;
 }
@@ -47,7 +48,7 @@ canvas {
 }
 
 .splitter > .gutter::before {
-    background-color: rgba(50, 187, 16, 0.5);
+    background-color: #FFC107
 }
 
 #editor-div {
@@ -57,7 +58,8 @@ canvas {
 }
 
 #qml-div {
-    background-color: #eee;
+    color: #fff;
+    background-color: #202225;
     width: 100%;
     height: 100%;
     min-width: 10px;
@@ -65,11 +67,12 @@ canvas {
 
 #qtcanvas {
     height: calc(100% - var(--header-height));
+    background-color: #202225;
 }
 
 /* Dropdown Button */
  .dropdown-button {
-    background-color: rgb(56, 216, 75);
+    background-color: #FFC107;
     color: white;
     padding: .2rem 1rem;
     font-size: 16px;
@@ -132,7 +135,7 @@ canvas {
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-    color: #3ca540;
+    color: #FFB300;
 }
 
 /* Show the dropdown menu on hover */
@@ -150,7 +153,7 @@ canvas {
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropdown-button {
-    background-color: #3e8e41;
+    background-color: #FFD54F;
 }
 
 .header-brand-1 {
@@ -205,7 +208,7 @@ canvas {
     font-weight: bold;
     position: absolute;
     padding: 1px 5px;
-    background-color: rgb(56, 216, 75);
+    background-color: #FFC107;
     color: #ffffff;
     left: 0;
     right: 0;
@@ -243,11 +246,11 @@ canvas {
 }
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: rgba(50, 187, 16, 0.2);
+    background: #FFC1077F;
 }
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: rgba(50, 187, 16, 0.7);
+    background: #FFD54F7F;
 }
 .app_editor_wrapper {
     width: 50%;
