html: Add build info
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/html/styles.css
+++ b/html/styles.css
@@ -177,6 +177,18 @@ canvas {
     top: 0.18em;
 }
 
+.build-info {
+    text-align: center;
+    height: 1.5em;
+    margin-top: 0.2em;
+    font-size: 0.9em;
+    top: 0em;
+    margin-left: calc(50% - 5em);
+    cursor: pointer;
+    position: fixed;
+    width: 15em;
+}
+
 .github-button {
     align-items: center;
     color: #fff;
