html: Fix example style
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/html/styles.css
+++ b/html/styles.css
@@ -112,13 +112,10 @@ canvas {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 15px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.096);
+    min-width: 50em;
+    padding-left: 1em;
     z-index: 1;
-    border-radius: 5px;
+    border-radius: 0.5em;
 }
 
 /* Links inside the dropdown */
